--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: 2691948959@qq.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
 url: "http://hlwdy.github.io/blog/"          # your host, for absolute URL
-baseurl: "/blog"      # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/hlwdy.github.io/blog"      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/hlwdy/hlwdy.github.io.git" # you code repository
 
 # Sidebar settings
